testsuite/tests/saks/should_fail/saks_fail012.hs
{-# LANGUAGE StandaloneKindSignatures #-}

module SAKS_Fail012 where

import Data.Kind (Type, Constraint)

type C :: Type -> Type -> Constraint
class C a where
